--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 
 	<body>
 		<p> Este é um parágrafo"</p>
-		<p> Este é outro parágrafo"</p>
+		<p> Este é o segundo parágrafo"</p>
 		</body>
 
 		</html>
